<resources>
    <string name="app_name">SIPS</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <string name="logout">Logout</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!--about fragment-->
    <string name="project_info">The Sports Injury Prevention Application is an app that can be used to detect an athletes risk of injury.</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="add_athlete">Add Athlete</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="invalid_form_data">Please provide valid inputs.</string>
    <string name="settings">Settings</string>
    <string name="test">Test</string>
    <string name="edit">Edit</string>
    <string name="stop_test">Stop</string>
    <string name="start_test">Start</string>
    <string name="choose_test">Choose Test</string>
    <string name="one_leg_squat_hold">One Leg Squat Hold</string>
    <string name="single_leg_jump">Single Leg Jump</string>
    <string name="testing_data">Testing Data</string>
    <string name="no_athletes_found">No Athletes found.</string>
    <string name="no_test_types_found">No test types found..</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_height_feet">Height (Feet)</string>
    <string name="hint_height_inches">Height (Inches)</string>
    <string name="hint_weight">Weight (lbs)</string>
    <string name="edit_athlete_title">Edit Athlete</string>
    <string name="sport_hint">Sport</string>
    <string name="position_hint">Position</string>
    <string name="birthday_hint">Birthday</string>
    <string name="hint_birthday">Select Birthday</string>
    <string name="profile_background_content_description">Profile Background</string>
    <string name="edit_athlete">Edit Athlete</string>
    <string name="start_athlete_workout_tracking">Start Workout Tracking</string>
    <string name="stop_athlete_workout_tracking">Stop Workout Tracking</string>

</resources>
