<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.madmensoftware.sips.ui.athlete.AthleteViewModel" />

        <variable
            name="athlete"
            type="com.madmensoftware.sips.data.models.room.Athlete" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/athlete_name"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="@{athlete.status.equals(`Unverified`) ? View.GONE : View.VISIBLE}"
                android:text="@{athlete.first_name + ' ' + athlete.last_name}"
                android:textSize="32sp"
                tools:text="Carson Jones" />

            <TextView
                android:id="@+id/athlete_email"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{athlete.email}"
                android:textSize="12sp"
                tools:text="clj0020@gmail.com" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/test_athlete_button"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:onClick="@{() -> viewModel.onTestAthleteButtonClick(athlete._id)}"
                    android:padding="10dp"
                    android:text="@string/test"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/edit_athlete_button"
                    style="@style/Button.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> viewModel.onEditAthleteButtonClick(athlete._id)}"
                    android:padding="10dp"
                    android:text="@string/edit"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/testing_data"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"/>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/testDataListSwipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/testDataListRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:adapter="@{viewModel.testDataObservableList}"
                    tools:listitem="@layout/item_athlete_view" />

            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />
    </FrameLayout>

</layout>