<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="isLoading"
            type="boolean" />
        <variable
            name="viewModel"
            type="com.madmensoftware.sips.ui.athlete_test.TestAthleteViewModel" />
        <variable
            name="isTestSelected"
            type="boolean" />
        <variable
            name="isClockStarted"
            type="boolean" />
        <variable
            name="context"
            type="android.content.Context" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/testing_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="visible"
            android:visibility="@{!isTestSelected ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/test_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="One Legged Squat" />

            <TextView
                android:id="@+id/time_text"
                style="@style/TextStyle.Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="116dp"
                android:text="00:00:00"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="70sp"
                app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/test_title_text"
                app:layout_constraintVertical_bias="0.079" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/start_athlete_test_button"
                    style="@style/Button.Primary"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:onClick="@{() -> viewModel.onStartTestClicked(context)}"
                    android:text="@string/start_test"
                    android:visibility="@{isClockStarted ? View.GONE : View.VISIBLE}" />

                <Button
                    android:id="@+id/stop_athlete_test_button"
                    style="@style/Button.Primary"
                    android:background="@color/colorAccentDark"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:onClick="@{() -> viewModel.onStopTestClicked()}"
                    android:text="@string/stop_test"
                    android:visibility="@{!isClockStarted ? View.GONE : View.VISIBLE}" />

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/test_selector_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone"
            android:visibility="@{isTestSelected ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/choose_test_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/choose_test"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/testTypeListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:adapter="@{viewModel.testTypeObservableList}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_test_text"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_test_type_view" />


        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>